--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "lucide-react": "^0.474.0",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
